Fix Contrast on my css elements

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header nav ul li .logo {
   font-size: 2rem;
   font-weight: 700;
   margin-left: 2.8rem;
-  color: #7f8cff;
+  color: #1427cf;
   text-decoration: none;
 }
 
@@ -151,7 +151,7 @@ p {
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
-  color: #7f8cff;
+  color: #1427cf;
   margin-top: 1.2rem;
 }
 
